Fixing layout issues

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -8,7 +8,7 @@
   display: flex;
   flex-direction: column;
   height: 100vh;
- width: 200vh;
+ width: 150vh;
 }
 
 .app-tabs{
