--- a/src/components/DataFetch/fetchData.css
+++ b/src/components/DataFetch/fetchData.css
@@ -21,5 +21,7 @@
 
 }
 .podcast-title-name{
-    
+    display: flex;
+    justify-content: left;
+   
 }
